--- a/trabalho/css/em-acao.css
+++ b/trabalho/css/em-acao.css
@@ -3,14 +3,58 @@
 	align-items: center;
 	flex-wrap: wrap;
 	max-width: 1000px;
-	margin: 2% auto;
+	min-height: 340px;
+	margin: 0 auto;
 }
 
 .conteudo img{
-	
+	width: 100%;
+	max-height: 450px;
+	max-width: 450px;
+    -webkit-transition: -webkit-transform .5s ease;
+    transition: transform .5s ease;
+}
+
+.conteudo img:hover{
+   -webkit-transform: scale(1.1);
+   transform: scale(1.1);
 }
 
 .conteudo p{
-	max-width: 450px;
-	margin: 0 auto;
+	max-width: 455px;
+	margin: 3% auto;
+}
+
+.saiba_mais{
+	font-size: 16px;
+	color: #fff;
+	text-decoration: none;
+	background-color: #FF4500;
+	border-radius: 30px;
+	padding: 10px;
+	margin-bottom: 5px;
+}
+
+.saiba_mais:hover{
+	background-color: #ff6600;
+}
+
+@media screen and (max-width: 1000px){
+	.conteudo{
+		flex-direction: column;
+	}
+	
+	.conteudo img{
+		margin: 2% auto;
+	}
+	
+	.conteudo p{
+		max-width: 90%;
+		font-size: 18px;
+	}
+	
+	.saiba_mais{
+		font-size: 14px;
+		padding: 15px;
+	}
 }
