--- a/trabalho/css/inicio.css
+++ b/trabalho/css/inicio.css
@@ -1,57 +1,16 @@
 .cabecalho-inicio{
+	position: relative;
 	height: 500px;
-	animation-name: animacao;
-	animation-duration: 30s;
-	animation-timing-function: step-end;
-	animation-iteration-count: infinite;
-}
-
-@keyframes animacao{	
-	0%{
-		background-image: url(../img/cabecalho.jpg);
-		background-position: center bottom;
-		background-size: cover;
-		background-repeat: no-repeat;
-	}
-	20%{
-		background-image: url(../img/cabecalho_1.jpg);
-		background-position: center;
-		background-size: cover;
-		background-repeat: no-repeat;
-	}
-	40%{
-		background-image: url(../img/cabecalho_2.jpg);
-		background-position: center;
-		background-repeat: no-repeat;
-	}
-	60%{
-		background-image: url(../img/cabecalho_3.jpg);
-		background-position: center bottom;
-		background-size: cover;
-		background-repeat: no-repeat;
-	}
-	80%{
-		background-image: url(../img/cabecalho_4.jpg);
-		background-position: center;
-		background-size: cover;
-		background-repeat: no-repeat;
-	}
-	100%{
-		background-image: url(../img/cabecalho_5.jpg);
-		background-position: center;
-		background-size: cover;
-		background-repeat: no-repeat;
-	}
 }
 
 .cabecalho-inicio h1{
 	position: relative;
-	top: 7%;
+	top: 35px;
 }
 
 .cabecalho-inicio nav{
 	position: relative;
-	top: 11%;
+	top: 30px;
 }
 
 .cabecalho-inicio h2{
@@ -59,41 +18,437 @@
 	top: 40%;
 }
 
-.corpo{
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	margin: 0 auto;
-	max-width: 1200px;
+.conteudo, .fatos{
+	margin: 0 2%;
+	font-size: 20px;
 }
 
-.corpo img{
-	width: 40%;
-	min-width: 450px;
-	margin: 10px auto;
-}
+@media screen and (min-width: 1200px){
+	.corpo{
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		margin: 0 auto;
+	}
+	
+	.corpo img{
+		width: 40%;
+		min-width: 450px;
+		margin: 10px auto;
+	}
+	
+	.conteudo{
+		margin-top: 3%;
+		margin-bottom: 3%;
+		max-width: 600px;
+	}
 
-.conteudo{
-	margin-top: 3%;
-	margin-bottom: 3%;
-	max-width: 600px;
-}
+	.conteudo p{
+		max-width: 600px;
+	}
 
-.conteudo p{
-	max-width: 600px;
-}
+	.conteudo h3{
+		margin-bottom: 5%;
+	}
 
-.conteudo h3{
-	margin-bottom: 5%;
-}
-
-.corpo ul{
-	max-width: 600px;
+	.corpo ul{
+		max-width: 600px;
+	}
 }
 
 #final{
 	max-width: 1000px;
-	margin: 5% auto;
+	margin: 0 auto;
+	padding: 5% 0;
 	font-size: 27px;
 	text-align: center;
+	line-height: 30px;
+}
+
+figure{
+	margin: 0 auto;
+	position: relative;
+	max-width: 500px; 
+}
+
+figure figcaption{
+	font-size: 15px;
+	text-align: center;
+	color: #c3c3c3;
+	position: absolute;
+	top: 75%;
+	width: 100%;
+	opacity: 0;
+	background-color: #000000;
+}
+
+figure:hover figcaption{
+	opacity: 1;
+}
+
+@media screen and (max-width: 1200px){
+	.cabecalho-inicio h2{
+		width: 80%;
+		line-height: 35px;
+	}
+	
+	.parte_fixa{
+		position: fixed;
+		background-color: #0a97d9;
+		height: 100px;
+		width: 100%;
+		top: 0;
+		z-index: 1;
+	}
+	
+	.cabecalho-inicio h1{
+		top: 20px;
+	}
+	
+	.corpo{
+		text-align: center;
+		padding-top: 15px;
+	}
+	
+	.corpo img{
+		width: 60%;
+		min-width: 450px;
+		margin: 10px auto;
+	}
+	
+	.conteudo{
+		width: 90%;
+		margin: 0 auto;
+		text-align: left;
+	}
+	
+	.conteudo h3{
+		margin: 5% 0;
+	}
+	
+	.corpo ul{
+		width: 90%;
+		margin: 0 auto;
+		text-align: left;
+	}
+	
+	.corpo img{
+		width: 50%;
+		margin-top: 2%;
+		margin-bottom: 2%;
+	}
+	
+	#final{
+		margin: 0 2%;
+	}
+}
+
+.small_img{
+    height: 100%;
+    cursor: pointer;
+    transition: all linear 0.4s;
+}
+.small_img:hover{
+    transform: scale(1.1);
+}
+
+.modal_img{
+    width: 65vw;
+    transform: scale(0);
+    transition: all linear .3s;
+}
+
+.modal_active, .modal_img{
+    transform: scale(1);
+}
+
+.modal{
+    width: 100vw;
+	height: 100vh;
+	margin: 0 auto;
+	overflow: hidden;
+    background-color: rgba(0, 0, 0, .7);
+    position: fixed;
+	top: 0;
+    visibility: hidden;
+    z-index: 1;
+    opacity: 0;
+    transition: visibility 0.8s linear, opacity 0.5s linear;
+}
+
+.modal_content{
+    height: 100vh;
+	position: relative;
+	margin: 0 auto;
+	max-width: 700px;
+	overflow: hidden;
+	display: flex;
+    align-items: center;
+}
+
+.modal_content img{
+	width: 100%;
+	min-width: 700px;
+	min-height: 300px;
+}
+
+.bt_close{
+    color:#fff;
+    background-color: #000;
+    position: absolute;
+    top:10px;
+    right: 10px;
+    padding: 1% 2%;
+    font-size: 25px;
+    border:solid 1px #fff;
+    transition: all ease-out .4s;
+    cursor: pointer;
+}
+.bt_close:hover{
+    background-color: #f00;
+}
+
+.modal_active{
+    visibility: visible;
+    opacity: 1;
+}
+
+.bt_prox img{
+    position: absolute;
+    top: 45%;
+    right: 7%;
+    padding: 5px 10px;
+    width: 20px;
+    transition: all ease-out .4s;
+    cursor: pointer;
+	z-index: 1;
+}
+
+.bt_ant img{
+	z-index: 1;
+	position: absolute;
+    top: 45%;
+    left: 7%;
+    padding: 5px 10px;
+    width: 20px;
+    transition: all ease-out .4s;
+    cursor: pointer;
+}
+
+.slideshow{
+	margin: 2% auto;
+	max-width: 500px;
+	height: 350px;
+	overflow: hidden;
+	position: relative;
+	cursor: pointer;
+}
+
+.navegacao{
+	background-color: #000;
+	width: 100%;
+	position: absolute;
+	bottom: 0px;
+	left: 50%;
+	transform: translate(-50%);
+	display: flex;
+	justify-content: center;
+}
+
+.navegacao img{
+	min-height: 50px;
+	min-width: 55px;
+}
+
+.barra{
+	width: 55px;
+	height: 50px;
+	margin-right: 3px;
+	margin-left: 3px;
+	margin-bottom: 10px;
+	margin-top: 5px;
+	cursor: pointer;
+	overflow: hidden;
+}
+
+header .navegacao{
+	background: none;
+	position: absolute;
+	bottom: 20px;
+}
+
+header .barra{
+	width: 10px;
+	height: 10px;
+	border: 2px solid #c3c3c3;
+	border-radius: 100%;
+	margin: 6px;
+}
+
+header .barra:hover{
+	background: #fff;
+}
+
+.miniatura:hover{
+	filter: grayscale(100%);
+}
+
+.slide{
+	width: 500%;
+	height: 100%;
+	display: flex;
+	align-items: top;
+}
+
+.item{
+	width: 20%;
+	transition: 0.6s;
+}
+
+.item img{
+	width: 100%;
+	min-width: 500px;
+}
+
+.miniatura{
+	width: 40px;
+}
+
+input[name="b"]{
+	position: absolute;
+	visibility: hidden;
+}
+
+#b1:checked ~ .i1{
+	margin-left: 0;
+}
+
+#b2:checked ~ .i1{
+	margin-left: -20%;
+}
+
+#b3:checked ~ .i1{
+	margin-left: -40%;
+}
+
+#b4:checked ~ .i1{
+	margin-left: -60%;
+}
+
+#b5:checked ~ .i1{
+	margin-left: -80%;
+}
+
+#b6:checked ~ .i1{
+	margin-left: -100%;
+}
+
+#b7:checked ~ .i1{
+	margin-left: -120%;
+}
+
+#b8:checked ~ .i1{
+	margin-left: -140%;
+}
+
+
+input[name="c"]{
+	position: absolute;
+	visibility: hidden;
+}
+
+#c1:checked ~ .i1{
+	margin-left: 0;
+}
+
+#c2:checked ~ .i1{
+	margin-left: -20%;
+}
+
+#c3:checked ~ .i1{
+	margin-left: -40%;
+}
+
+#c4:checked ~ .i1{
+	margin-left: -60%;
+}
+
+#c5:checked ~ .i1{
+	margin-left: -80%;
+}
+
+#c6:checked ~ .i1{
+	margin-left: -100%;
+}
+
+input[name="d"]{
+	position: absolute;
+	visibility: hidden;
+}
+
+#d1:checked ~ .i1{
+	margin-left: 0;
+}
+
+#d2:checked ~ .i1{
+	margin-left: -20%;
+}
+
+#d3:checked ~ .i1{
+	margin-left: -40%;
+}
+
+/* slides */
+
+.slideshow_cabecalho{
+	position: absolute;
+	width: 100%;
+	height: 500px;
+	overflow: hidden;
+}
+
+.slide_cabecalho{
+	width: 600%;
+	height: 500px;
+	display: flex;
+	align-items: center;
+}
+
+.slide_cabecalho img{
+	width: 100%;
+}
+
+input[name="a"]{
+	position: absolute;
+	visibility: hidden;
+}
+
+#a1:checked ~ .i1{
+	margin-left: 0;
+}
+
+#a2:checked ~ .i1{
+	margin-left: -20%;
+}
+
+#a3:checked ~ .i1{
+	margin-left: -40%;
+}
+
+#a4:checked ~ .i1{
+	margin-left: -60%;
+}
+
+#a5:checked ~ .i1{
+	margin-left: -80%;
+}
+
+#a6:checked ~ .i1{
+	margin-left: -100%;
+}
+
+@media screen and (max-width: 770px){
+	.slide_cabecalho{
+		width: 940%;
+	}
 }
