--- a/trabalho/css/metas.css
+++ b/trabalho/css/metas.css
@@ -1,33 +1,56 @@
-.corpo{
-	display: flex;
-	flex-wrap: wrap;
-	max-width: 1200px;
-	margin: 0 auto;
+@media screen and (min-width: 1200px){
+	.corpo{
+		display: flex;
+		flex-wrap: wrap;
+		max-width: 1200px;
+		margin: 0 auto;
+	}
+
+	.conteudo{
+		display: flex;
+		align-items: center;
+		flex: 1 1 500px;
+		width: 30%;
+		height: 300px;
+		margin: 0 auto;
+	}
+
+	.conteudo img{
+		width: 120px;
+		margin: 0 2%;
+	}
+
+	.conteudo p{
+		width: 95%;
+		text-align: left;
+		margin-right: 15px;
+	}
+	
+	#titulo{
+		text-align: center;
+		width: 70%;
+		margin: 4% auto;
+		font-size: 22px;
+	}
 }
 
-.conteudo{
-	display: flex;
-	align-items: center;
-	flex: 1 1 500px;
-	width: 30%;
-	height: 300px;
-	margin: 0 auto;
-}
+@media screen and (max-width: 1200px){
+	#titulo{
+		text-align: center;
+		width: 90%;
+		padding-top: 4%;
+		font-size: 22px;
+	}
 
-.conteudo img{
-	width: 120px;
-	margin-right: 2%;
-}
+	.conteudo{
+		display: flex;
+		align-items: center;
+		margin: 0 2%;
+		padding: 5% 0;
+	}
 
-.conteudo p{
-	width: 95%;
-	text-align: left;
-	margin-right: 15px;
-}
-
-#titulo{
-	text-align: center;
-	width: 70%;
-	margin: 4% auto;
-	font-size: 22px;
+	.conteudo img{
+		width: 25%;
+		margin-right: 2%;
+	}
 }
