--- a/trabalho/css/em-acao.css
+++ b/trabalho/css/em-acao.css
@@ -8,9 +8,7 @@
 }
 
 .conteudo img{
-	width: 100%;
-	max-height: 450px;
-	max-width: 450px;
+	width: 450px;
     -webkit-transition: -webkit-transform .5s ease;
     transition: transform .5s ease;
 }
@@ -45,16 +43,23 @@
 	}
 	
 	.conteudo img{
-		margin: 2% auto;
+		width: 100%;
+	}
+	
+	.conteudo a{
+		width: 90%;
 	}
 	
 	.conteudo p{
 		max-width: 90%;
-		font-size: 18px;
 	}
 	
 	.saiba_mais{
 		font-size: 14px;
 		padding: 15px;
+	}
+	
+	.corpo{
+		padding-top: 2%;
 	}
 }
