--- a/trabalho/css/metas.css
+++ b/trabalho/css/metas.css
@@ -12,7 +12,7 @@
 		flex: 1 1 500px;
 		width: 30%;
 		height: 300px;
-		margin: 0 auto;
+		margin: 1% auto;
 	}
 
 	.conteudo img{
@@ -26,20 +26,18 @@
 		margin-right: 15px;
 	}
 	
-	#titulo{
+	h2{
 		text-align: center;
 		width: 70%;
 		margin: 4% auto;
-		font-size: 22px;
 	}
 }
 
 @media screen and (max-width: 1200px){
-	#titulo{
+	h2{
 		text-align: center;
 		width: 90%;
 		padding-top: 4%;
-		font-size: 22px;
 	}
 
 	.conteudo{
