--- a/trabalho/css/estilos.css
+++ b/trabalho/css/estilos.css
@@ -1,468 +1,285 @@
-.cabecalho-inicio{
-	position: relative;
-	height: 500px;
+body{
+	background-image: linear-gradient(#0a97d9,#021b26);
+	font-family: Arial, sans-serif;
 }
 
-.cabecalho-inicio h1{
-	position: relative;
-	top: 35px;
+.corpo{
+	background-color: #fff;
+	max-width: 1200px;
+	margin: 0 auto;
+	padding-bottom: 2.5%;
 }
 
-.cabecalho-inicio nav{
+header{
+	text-align: center;
+	width: 100%;
+	height: 180px;
+	color: #ffffff;
+}
+
+h1{
+	position: relative;
+	top: 20%;
+	font-family: Haettenschweiler;
+	letter-spacing: 2px;
+	font-size: 50px;
+	text-transform: uppercase;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 auto;
+}
+
+h1 a{
+	color: #fff;
+	text-decoration: none;
+}
+
+#logo{
+	height: 38px;
+	margin-right: 2px;
+}
+
+.menu{
 	position: relative;
 	top: 30px;
+	font-size: 17px;
 }
 
-.cabecalho-inicio h2{
-	position: relative;
-	top: 30%;
+.menu li{
+	display: inline;
 }
 
-.conteudo, .fatos{
-	margin: 0 2%;
+.menu a{
+	margin-right: 5%;
+	padding: 7px;
+	text-decoration: none;
+	color: #ffffff;
 }
 
-@media screen and (min-width: 1200px){
-	.corpo{
-		display: flex;
-		flex-wrap: wrap;
-		align-items: center;
-		margin: 0 auto;
-	}
-	
-	.corpo img{
-		width: 40%;
-		min-width: 450px;
-		margin: 10px auto;
-	}
-	
-	.conteudo{
-		margin-top: 3%;
-		margin-bottom: 3%;
-		max-width: 600px;
-	}
-
-	.conteudo p{
-		max-width: 590px;
-	}
-
-	.conteudo h3{
-		margin-bottom: 5%;
-	}
-
-	.corpo ul{
-		max-width: 600px;
-	}
+#ativado{
+	background-color: #087eb5;
 }
 
-#final{
-	max-width: 1000px;
+.menu a:hover{
+	background-color: #06597f;
+}
+
+header h2{
+	width: 50%;
+}
+
+h2{
 	margin: 0 auto;
-	padding: 5% 0;
-	font-size: 27px;
+	font-size: 28px;
+	text-transform: uppercase;
+	font-weight: bolder;
 	text-align: center;
-	line-height: 30px;
 }
 
-.small_img{
-    height: 100%;
-    cursor: pointer;
-    transition: all linear 0.4s;
-}
-.small_img:hover{
-    transform: scale(1.1);
+h3{
+	font-size: 23px;
+	text-transform: uppercase;
+	margin-top: 10px;
+	font-weight: bolder;
 }
 
-.modal_img{
-    width: 65vw;
-    transform: scale(0);
-    transition: all linear .3s;
+p, li{
+	font-size: 20px;
+	line-height: 27px;
 }
 
-.modal_active, .modal_img{
-    transform: scale(1);
-}
-
-.modal{
-    width: 100vw;
-	height: 100vh;
-	margin: 0 auto;
-	overflow: hidden;
-    background-color: rgba(0, 0, 0, .7);
-    position: fixed;
-	top: 0;
-    visibility: hidden;
-    z-index: 1;
-    opacity: 0;
-    transition: visibility 0.8s linear, opacity 0.5s linear;
-}
-
-.modal_content{
-    height: 100vh;
-	position: relative;
-	margin: 0 auto;
-	max-width: 700px;
-	overflow: hidden;
+footer{
+	color: #ffffff;
 	display: flex;
-    align-items: center;
+	align-items: flex-start;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	align-content: flex-start;
 }
 
-.modal_content img{
-	width: 100%;
-	min-width: 700px;
-	min-height: 300px;
+footer div{
+	margin-top: 2%;
+	width: 25%;
 }
 
-.bt_close{
-    color:#fff;
-    background-color: #000;
-    position: absolute;
-    top: 25px;
-    right: 25px;
-    padding: 1% 1.5%;
-    font-size: 50px;
-    border:solid 1px #fff;
-    transition: all ease-out .4s;
-    cursor: pointer;
+footer h4{
+	padding-bottom: 10px;
+	font-size: 17px;
+	text-transform: uppercase;
+	font-weight: bolder;
 }
 
-.bt_close:hover{
-    background-color: #f00;
+footer a{
+	text-decoration: none;
+	color: #f2f2f2;
 }
 
-.modal_active{
-    visibility: visible;
-    opacity: 1;
+footer li{
+	padding-bottom: 10px;
+	font-size: 15px;
 }
 
-.bt_prox img{
-    position: absolute;
-    top: 45%;
-    right: 7%;
-    padding: 5px 10px;
-    width: 40px;
-    transition: all ease-out .4s;
-    cursor: pointer;
-	z-index: 1;
+footer img{
+	width: 20px;
+	margin-bottom: 3px;
+	margin-right: 10px;	
 }
 
-.bt_ant img{
-	z-index: 1;
-	position: absolute;
-    top: 45%;
-    left: 7%;
-    padding: 5px 10px;
-    width: 40px;
-    transition: all ease-out .4s;
-    cursor: pointer;
-}
-
-.slideshow{
-	margin: 2% auto;
-	max-width: 500px;
-	height: 350px;
-	overflow: hidden;
-	position: relative;
-	cursor: pointer;
-}
-
-.navegacao{
-	background-color: #000;
-	width: 100%;
-	position: absolute;
-	bottom: 0px;
-	left: 50%;
-	transform: translate(-50%);
+.redes_sociais{
 	display: flex;
-	justify-content: center;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	width: 80%;
 }
 
-.navegacao img{
-	min-height: 50px;
-	min-width: 55px;
-}
-
-.barra{
-	width: 55px;
-	height: 50px;
-	margin-right: 3px;
-	margin-left: 3px;
-	margin-bottom: 10px;
-	margin-top: 5px;
-	cursor: pointer;
-	overflow: hidden;
-}
-
-header .navegacao{
-	background: none;
-	position: absolute;
-	bottom: 20px;
-}
-
-header .barra{
-	width: 12px;
-	height: 12px;
-	border: 2px solid #ebebeb;
-	border-radius: 100%;
-	margin: 7px;
-}
-
-header .barra:hover{
-	background: #fff;
-}
-
-.miniatura:hover{
-	filter: grayscale(100%);
-}
-
-figure{
-	margin: 0 auto;
-	position: relative;
-	max-width: 500px; 
-}
-
-figure figcaption{
-	padding: 10px 0;
-	text-align: center;
-	color: #c3c3c3;
-	position: absolute;
-	top: 75%;
-	width: 100%;
-	opacity: 0;
-	background-color: #000000;
-}
-
-figure:hover figcaption{
-	opacity: 1;
-}
-
-.slide{
-	width: 500%;
-	height: 100%;
+.redes_sociais a{
 	display: flex;
-	align-items: top;
-}
-
-.item{
-	width: 20%;
-	transition: 0.6s;
-}
-
-.item img{
-	width: 100%;
-	min-width: 500px;
-}
-
-.miniatura{
-	width: 40px;
-}
-
-input[name="b"]{
-	position: absolute;
-	visibility: hidden;
-}
-
-#b1:checked ~ .i1{
-	margin-left: 0;
-}
-
-#b2:checked ~ .i1{
-	margin-left: -20%;
-}
-
-#b3:checked ~ .i1{
-	margin-left: -40%;
-}
-
-#b4:checked ~ .i1{
-	margin-left: -60%;
-}
-
-#b5:checked ~ .i1{
-	margin-left: -80%;
-}
-
-#b6:checked ~ .i1{
-	margin-left: -100%;
-}
-
-#b7:checked ~ .i1{
-	margin-left: -120%;
-}
-
-#b8:checked ~ .i1{
-	margin-left: -140%;
-}
-
-
-input[name="c"]{
-	position: absolute;
-	visibility: hidden;
-}
-
-#c1:checked ~ .i1{
-	margin-left: 0;
-}
-
-#c2:checked ~ .i1{
-	margin-left: -20%;
-}
-
-#c3:checked ~ .i1{
-	margin-left: -40%;
-}
-
-#c4:checked ~ .i1{
-	margin-left: -60%;
-}
-
-#c5:checked ~ .i1{
-	margin-left: -80%;
-}
-
-#c6:checked ~ .i1{
-	margin-left: -100%;
-}
-
-input[name="d"]{
-	position: absolute;
-	visibility: hidden;
-}
-
-#d1:checked ~ .i1{
-	margin-left: 0;
-}
-
-#d2:checked ~ .i1{
-	margin-left: -20%;
-}
-
-#d3:checked ~ .i1{
-	margin-left: -40%;
-}
-
-.slideshow_cabecalho{
-	position: absolute;
-	width: 100%;
-	height: 500px;
-	overflow: hidden;
-}
-
-.slide_cabecalho{
-	width: 600%;
-	height: 500px;
-	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 }
 
-.slide_cabecalho img{
+.redes_sociais li{
+	padding-top: 3%;
+	font-size: 13px;
+	margin-right: 10px;
+}
+
+footer span{
 	width: 100%;
+	display: block;
+	text-align: center;
+	color: #ffffff;
+	padding: 2%;
 }
 
-input[name="a"]{
-	position: absolute;
-	visibility: hidden;
+.destaque{
+	text-transform: uppercase;
 }
 
-#a1:checked ~ .i1{
-	margin-left: 0;
+strong{
+	font-weight: bolder;
 }
 
-#a2:checked ~ .i1{
-	margin-left: -20%;
+figcaption{
+	font-size: 15px;
+	text-align: center;
 }
 
-#a3:checked ~ .i1{
-	margin-left: -40%;
-}
-
-#a4:checked ~ .i1{
-	margin-left: -60%;
-}
-
-#a5:checked ~ .i1{
-	margin-left: -80%;
-}
-
-#a6:checked ~ .i1{
-	margin-left: -100%;
-}
-
-@media screen and (max-width: 770px){
-	.slide_cabecalho{
-		width: 940%;
+@media screen and (min-width: 1000px){
+	#icone{
+		display: none;
 	}
 }
 
-@media screen and (max-width: 1200px){
-	header .barra{
-		width: 30px;
-		border-radius: 50px;
-	}
-	
-	.cabecalho-inicio{
-		height: 600px;
-	}
-	
-	.slideshow_cabecalho{
-		height: 600px;
-	}
-	
-	.slide_cabecalho{
-		height: 600px;
-	}
-	
-	.slide_cabecalho img{
-		min-height: 600px;
-		height: 100%;
-	}
-	
-	.cabecalho-inicio h2{
-		width: 85%;
-		line-height: 35px;
-	}
-	
-	.parte_fixa{
-		position: fixed;
+@media screen and (max-width: 1000px){
+	header{
 		background-color: #0a97d9;
 		height: 150px;
-		width: 100%;
+		position: sticky;
 		top: 0;
+	}
+	
+	h1{
+		position: relative;
+		top: 20%;
+		font-size: 88px;
+	}
+	
+	#logo{
+		height: 70px;
+	}
+	
+	label img{
+		width: 60px;
+	}
+
+	#check{
+		display: none;
+	}
+
+	#icone{
+		cursor: pointer;
+		padding: 15px;
+		position: absolute;
+		left: 0;
+		top: 30px;
+		z-index: 2;
+	}
+
+	.barra_menu{
+		background-color: #0a97d9;
+		height: 100vh;
+		width: 50vw;
+		position: absolute;
+		top: 0;
+		left: -50vw;
+		transition: all .2s linear;
 		z-index: 1;
 	}
-	
-	.cabecalho-inicio h1{
-		top: 30px;
+
+	.menu{
+		width: 100%;
+		position: absolute;
 	}
-	
-	.corpo{
-		text-align: center;
-		padding-top: 15px;
-	}
-	
-	.conteudo{
-		width: 90%;
-		margin: 0 auto;
+
+	.menu a{
+		font-size: 38px;
+		position: relative;
+		top: 100px;
+		padding: 45px;
+		margin-bottom: 35px;
 		text-align: left;
+		transition: all .2s linear;
+		display: block;
+	}
+
+	#check:checked ~ .barra_menu{
+		transform: translate(50vw);
 	}
 	
-	.conteudo h3{
-		margin: 5% 0;
+	footer{
+		height: 500px;
+		display: flex;
+		flex-wrap: wrap;
 	}
-	
-	.corpo ul{
+
+	footer div{
+		margin: 7px 0 auto;
 		width: 90%;
-		margin: 0 auto;
-		text-align: left;
+		padding-left: 5%;
+		padding-right: 2%;
+		padding-top: 2%;
+		padding-bottom: 2%;
 	}
 	
-	.corpo img{
-		width: 90%;
-		margin-top: 2%;
-		margin-bottom: 2%;
+	footer img{
+		width: 50px;
 	}
 	
-	#final{
-		margin: 0 2%;
+	footer h4{
+		font-size: 35px;
+	}
+	
+	footer li{
+		padding: 1% 0;
+		font-size: 30px;
+	}
+	
+	footer span{
+		font-size: 25px;
+	}
+	
+	.redes_sociais{
+		width: 100%;
+		display: flex;
+		margin: 10px auto;
+		justify-content: justify;
+	}
+	
+	.redes_sociais li{
+		display: none;
+		text-align: center;	
 	}
 }
+
