--- a/trabalho/css/estilos.css
+++ b/trabalho/css/estilos.css
@@ -166,13 +166,13 @@ figcaption{
 	text-align: center;
 }
 
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 1100px){
 	#icone{
 		display: none;
 	}
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1100px){
 	header{
 		background-color: #0a97d9;
 		height: 150px;
@@ -202,7 +202,7 @@ figcaption{
 		cursor: pointer;
 		padding: 15px;
 		position: absolute;
-		left: 0;
+		left: 10px;
 		top: 30px;
 		z-index: 2;
 	}
@@ -282,4 +282,3 @@ figcaption{
 		text-align: center;	
 	}
 }
-
