--- a/trabalho/css/inicio.css
+++ b/trabalho/css/inicio.css
@@ -22,7 +22,7 @@
 	margin: 0 2%;
 }
 
-@media screen and (min-width: 1200px){
+@media screen and (min-width: 1100px){
 	.corpo{
 		display: flex;
 		flex-wrap: wrap;
@@ -65,7 +65,6 @@
 }
 
 .small_img{
-    height: 100%;
     cursor: pointer;
     transition: all linear 0.4s;
 }
@@ -101,7 +100,7 @@
     height: 100vh;
 	position: relative;
 	margin: 0 auto;
-	max-width: 700px;
+	max-width: 800px;
 	overflow: hidden;
 	display: flex;
     align-items: center;
@@ -109,7 +108,7 @@
 
 .modal_content img{
 	width: 100%;
-	min-width: 700px;
+	min-width: 800px;
 	min-height: 300px;
 }
 
@@ -140,7 +139,7 @@
     top: 45%;
     right: 7%;
     padding: 5px 10px;
-    width: 40px;
+    width: 45px;
     transition: all ease-out .4s;
     cursor: pointer;
 	z-index: 1;
@@ -152,13 +151,13 @@
     top: 45%;
     left: 7%;
     padding: 5px 10px;
-    width: 40px;
+    width: 45px;
     transition: all ease-out .4s;
     cursor: pointer;
 }
 
 .slideshow{
-	margin: 2% auto;
+	/* margin: 2% auto; */
 	max-width: 500px;
 	height: 350px;
 	overflow: hidden;
@@ -218,7 +217,7 @@ header .barra:hover{
 figure{
 	margin: 0 auto;
 	position: relative;
-	max-width: 500px; 
+	max-width: 500px;
 }
 
 figure figcaption{
@@ -250,7 +249,7 @@ figure:hover figcaption{
 
 .item img{
 	width: 100%;
-	min-width: 500px;
+	min-width: 600px;
 }
 
 .miniatura{
@@ -394,7 +393,7 @@ input[name="a"]{
 	}
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1100px){
 	header .barra{
 		width: 30px;
 		border-radius: 50px;
@@ -402,6 +401,15 @@ input[name="a"]{
 	
 	.cabecalho-inicio{
 		height: 600px;
+	}
+	
+	.parte_fixa{
+		position: fixed;
+		background-color: #0a97d9;
+		height: 150px;
+		width: 100%;
+		top: 0;
+		z-index: 1;
 	}
 	
 	.slideshow_cabecalho{
@@ -420,15 +428,6 @@ input[name="a"]{
 	.cabecalho-inicio h2{
 		width: 85%;
 		line-height: 35px;
-	}
-	
-	.parte_fixa{
-		position: fixed;
-		background-color: #0a97d9;
-		height: 150px;
-		width: 100%;
-		top: 0;
-		z-index: 1;
 	}
 	
 	.cabecalho-inicio h1{
@@ -457,12 +456,44 @@ input[name="a"]{
 	}
 	
 	.corpo img{
-		width: 90%;
+		width: 80%;
 		margin-top: 2%;
 		margin-bottom: 2%;
 	}
 	
 	#final{
 		margin: 0 2%;
+	}
+	
+	.bt_ant img{
+		top: 50vh;
+	}
+	
+	.bt_prox img{
+		top: 50vh;
+	}
+	
+	.slideshow{
+		position: relative;
+		min-width: 800px;
+		height: 450px;
+	}
+	
+	.slide .item{
+		width: 800px;
+	}
+
+	.slide .item img{
+		width: 110%;
+		min-width: 800px;
+	}
+	
+	figure{
+		max-width: 800px;
+	}
+	
+	figure figcaption{
+		top: 78%;
+		font-size: 20px;
 	}
 }
