--- a/trabalho/css/estilos.css
+++ b/trabalho/css/estilos.css
@@ -156,6 +156,10 @@ footer span{
 	padding: 2%;
 }
 
+footer span a{
+      text-decoration: underline;
+}
+
 .destaque{
 	text-transform: uppercase;
 }
